@@ -29,5 +29,18 @@ subprojects {
     dependencies {
         compileOnly 'org.projectlombok:lombok:1.18.30'
         annotationProcessor 'org.projectlombok:lombok:1.18.30'
+
+        testCompileOnly 'org.projectlombok:lombok:1.18.30'
+        testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
+        testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
+        testImplementation 'org.mockito:mockito-core:5.14.2'
+        testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'
+        testImplementation 'net.bytebuddy:byte-buddy:1.15.10'
+        testImplementation 'org.assertj:assertj-core:3.25.3'
+    }
+
+    test {
+        useJUnitPlatform()
+        jvmArgs '-XX:+EnableDynamicAgentLoading'
     }
 }
